arreglo de la pagina de bienvenida y creacion del login y registro

--- a/css/bienvenida.css
+++ b/css/bienvenida.css
@@ -127,7 +127,7 @@ section#hare{
     .navbar{
         display: none;
     }
-    #carouselExampleCaptions{
+    .carousel-inner{
         display: none;
     }
       .banner {
