--- a/css/homeUsuario.css
+++ b/css/homeUsuario.css
@@ -1,7 +1,25 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+html {
+  font-size: 62.5%;
+  font-family:
+}
+
+body{
+  font-size: 1.6rem;
+  height: 100vh;
+  background-color: #1358ab;
+}
+
+footer{
+  background-color: #151618;
+  margin-top: 10rem;
+}
+
 
 .navegacion{ 
   background-color: #151618;
@@ -15,10 +33,7 @@
   background-color: #151618;
 }
 
-footer{
-  background-color: #151618;
-  margin: auto;
-}
+
 
 .clase-footer{
   display: flex;
@@ -31,34 +46,9 @@ footer{
   text-decoration: none;
 }
 
-body{
-  height: 100vh;
+
+.navbar-toggler {
   background-color: #1358ab;
-}
-
-
-
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style-type: none;
-  text-decoration: none;
-}
-
-:root {
-  --primary: #ec994b;
-  --white: #ffffff;
-  --bg: #f5f5f5;
-}
-
-html {
-  font-size: 62.5%;
-  font-family: ;
-  scroll-behavior: smooth;
 }
 
 @media (min-width: 1440px) {
@@ -79,47 +69,10 @@ html {
   }
 }
 
-::-webkit-scrollbar {
-  width: 1.3rem;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 1rem;
-  background: #797979;
-  transition: all 0.5s ease-in-out;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #222224;
-}
-
-::-webkit-scrollbar-track {
-  background: #f9f9f9;
-}
-
-body {
-  font-size: 1.6rem;
-  background: ;
-}
-
-.container {
-  max-width: 124rem;
-  padding: 0 1rem;
-  margin: 0 auto;
-}
-
-.text-center {
-  text-align: center;
-}
-
 .section-heading {
   font-size: 3rem;
   color: #151618;
   padding: 2rem 0;
-}
-
-#tranding {
-  padding: 4rem 0;
 }
 
 @media (max-width:1440px) {
@@ -142,7 +95,6 @@ body {
 
 .tranding-slide {
   width: 37rem;
-  height: 42rem;
   position: relative;
 }
 
@@ -160,7 +112,7 @@ body {
 .tranding-slide .tranding-slide-img img {
   width: 25rem;
   height: 25rem;
-  border-radius: 1rem;
+  border-radius: ;
   object-fit: cover;
 }
 
@@ -169,12 +121,6 @@ body {
   bottom: 2rem;
   left: 2rem;
   color: var(--white);
-}
-
-.food-rating {
-  padding-top: 1rem;
-  display: flex;
-  gap: 1rem;
 }
 
 .swiper-slide-shadow-left,
