--- a/css/homeUsuario.css
+++ b/css/homeUsuario.css
@@ -57,7 +57,7 @@ body{
 
 html {
   font-size: 62.5%;
-  font-family: ;
+  font-family:Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -99,7 +99,6 @@ html {
 
 body {
   font-size: 1.6rem;
-  background: ;
 }
 
 .container {
