--- a/css/bienvenida.css
+++ b/css/bienvenida.css
@@ -118,12 +118,13 @@ section#hare{
         font-size: 12px;
     }
 }
-@media only screen and (min-width: 767px){
+@media only screen and (min-width: 967px){
     .banner{
         display: none;
     }
+    
 }
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 967px) and (min-width: 438px){
     .navbar{
         display: none;
     }
@@ -131,6 +132,92 @@ section#hare{
         display: none;
     }
       .banner {
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+      }
+      .banner img {
+        width: 100%;
+        height: 100vh;
+        max-width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -1; /* Coloca la imagen detrás del contenido */
+      }
+    
+      .card {
+        margin-top: 40vh;
+        width: 90%;
+        height: auto;
+        max-width: 100%; /* Ancho máximo de la tarjeta */
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 0 0 8px 8px; /* Bordes redondeados solo en la parte inferior */
+        padding: 20px;
+        border-radius: 8px 8px 0 0; /* Bordes redondeados solo en la parte superior */
+      }
+      .imabanner{
+        display: none;
+      }
+    
+      .btn1 {
+        display: block;
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        text-align: center;
+        background-color: #0c4488;
+        color: #151618;
+        border: none;
+        border-radius: 5px;
+      }
+      .btn1{
+        background-color: #151618;
+        color: #fff;
+      }
+      
+      btn1:hover{
+        background-color: #fff;
+        color: #0c4488;
+      }
+
+     h2{
+        color: #fff;
+     }
+     p{
+        color: #fff;
+     }
+      .btn:last-child {
+        margin-bottom: 0; /* Eliminar el margen inferior del último botón */
+      }
+    /* .navbar-nav{
+        text-align: center;
+    }
+    .carousel-caption h5{
+        font-size: 17px;
+    }
+    .carousel-caption a{
+        padding: 10px 15px;
+    }
+    .carousel-caption p{
+        width: 100%;
+        line-height: 1.6;
+        font-size: 12px;
+    } */
+}
+@media only screen and (max-width: 437px){
+    .navbar{
+        display: none;
+    }
+    .carousel-inner{
+        display: none;
+    }
+    .imgbanner{
+        display: none;
+    }
+    .banner {
         position: relative;
         width: 100%;
         height: 100vh;
@@ -188,18 +275,4 @@ section#hare{
       .btn:last-child {
         margin-bottom: 0; /* Eliminar el margen inferior del último botón */
       }
-    /* .navbar-nav{
-        text-align: center;
-    }
-    .carousel-caption h5{
-        font-size: 17px;
-    }
-    .carousel-caption a{
-        padding: 10px 15px;
-    }
-    .carousel-caption p{
-        width: 100%;
-        line-height: 1.6;
-        font-size: 12px;
-    } */
 }
