se creo la seccion  -recien escuchado-

--- a/css/homeUsuario.css
+++ b/css/homeUsuario.css
@@ -55,6 +55,16 @@ background-color: #151618;
   background-color: #1358ab;
 }
 
+.cardCancion{
+  background-color: transparent;
+  color: #fff;
+  transition: transform 0.3s;
+}
+
+.cardCancion:hover{
+  transform: scale(1.05);
+}
+
 @media (min-width: 1440px) {
   html {
     zoom: 1.5;
