--- a/css/homeUsuario.css
+++ b/css/homeUsuario.css
@@ -228,3 +228,38 @@ background-color: #151618;
 .tranding-slider-control .swiper-pagination .swiper-pagination-bullet-active {
   background: #151618;
 }
+
+
+.searchContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+#searchInput {
+  width: 200px;
+  padding: 8px;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+#listArtists {
+  width: 200px;
+  border: 1px solid #151618;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.itemSearch {
+  padding: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  border-color: #151618;
+}
+
+.itemSearch:hover {
+  background-color: #1358ab;
+}
