--- a/css/homeadmin.css
+++ b/css/homeadmin.css
@@ -1,10 +1,8 @@
 /* styles.css */
 
-
-
 body {
   font-family: Arial, sans-serif;
-  background-color: black;
+  background-color: #151618;
   color: white;
 }
 
@@ -47,18 +45,16 @@ button:hover {
   color: #0c4488;
 }
 
-
-.modal{
+.modal {
   color: #1358ab;
 }
 
-.btn{
+.btn {
   background-color: #1358ab;
   color: #fff;
   border: solid #1358ab;
 }
 
-.btn:hover{
+.btn:hover {
   background-color: #151618;
-  
 }
